--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
         "networking",
         "webview",
         "audio",
-        "video"
+        "video",
+		"location"
     ],
     "policy_version": 1.1
 }
