add toplevel config as config.js, update README, clean up code structure and move all QML to qml/ dir, add shadow to bottom edge button, add haptic feedback to action buttons

--- a/app.desktop
+++ b/app.desktop
@@ -2,6 +2,6 @@
 Name=Google Plus
 Type=Application
 Icon=icon.png
-Exec=qmlscene $@ Main.qml
+Exec=qmlscene $@ qml/Main.qml
 Terminal=false
 X-Ubuntu-Touch=true
