add support for geolocation, add a file picker for apps that support upload of files, set a bunch of defaults for the webview (most importantly cache images)

--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
         "webview",
         "audio",
         "video",
-        "location"
+        "location",
+        "content_exchange"
     ],
     "policy_version": 1.1
 }
