--- a/app.desktop
+++ b/app.desktop
@@ -2,6 +2,6 @@
 Name=Google Plus
 Type=Application
 Icon=icon.png
-Exec=qmlscene $@ qml/Main.qml
+Exec=qmlscene %u qml/Main.qml
 Terminal=false
 X-Ubuntu-Touch=true
