--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
         "video",
         "location",
         "content_exchange",
-        "content_exchange_source"
+        "content_exchange_source",
+        "keep-display-on"
     ],
     "policy_version": 1.3
 }
