--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,14 @@
     "framework": "ubuntu-sdk-15.04",
     "hooks": {
         "youtube-web": {
-          
-        "desktop": "YouTube.desktop",
-        "apparmor": "app.json",
-        "urls": "youtube-web.url-dispatcher"
-    }
-},
+            "apparmor": "app.json",
+            "desktop": "YouTube.desktop",
+            "urls": "youtube-web.url-dispatcher"
+        }
+    },
+    "installed-size": "273",
     "maintainer": "Mateo Salta <mateo_salta@yahoo.com>",
-	"name": "youtube-web.mateo-salta",
+    "name": "youtube-web.mateo-salta",
     "title": "YouTube",
-    "version": "1.1"
+    "version": "1.3.1"
 }
