--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     },
     "installed-size": "273",
     "maintainer": "Mateo Salta <mateo_salta@yahoo.com>",
-    "name": "youtube-web.mateo-salta",
+    "name": "youtube-next.mateo-salta",
     "title": "YouTube",
-    "version": "1.3.2"
+    "version": "1.3.3"
 }
